--- a/CDAM-Net.ipynb
+++ b/CDAM-Net.ipynb
@@ -171,8 +171,8 @@
         "    a=Conv2D(shape[3] // shape[3],1, padding='same') (a)\n",
         "    a=Activation('sigmoid') (a)\n",
         "    b=Lambda(lambda x: K.mean(x,axis=3,keepdims=True))  (inputs)\n",
-        "    b=Conv2D(shape[3] // shape[3],1, padding='same') (a)\n",
-        "    b=Activation('sigmoid') (a)\n",
+        "    b=Conv2D(shape[3] // shape[3],1, padding='same') (b)\n",
+        "    b=Activation('sigmoid') (b)\n",
         "    c=tf.keras.layers.Average()([a,b])\n",
         "    S_A=tf.math.multiply(c,inputs)\n",
         "    v=tf.keras.layers.Add()([C_A,S_A])\n",
