--- a/CDAM-Net.ipynb
+++ b/CDAM-Net.ipynb
@@ -60,6 +60,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# loading data\n",
         "train_data = ImageDataGenerator(rescale=1./255, rotation_range = 10,\n",
         "                                   width_shift_range = 0.2,\n",
         "                                   height_shift_range = 0.2,\n",
@@ -115,6 +116,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# MFR Block\n",
         "def conv_module(x,k):\n",
         "    a=Conv2D(k,(1,1),padding='same')(x)\n",
         "    a=BatchNormalization()(a)\n",
@@ -152,6 +154,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# channel-shuffle dual attention module\n",
         "def CSDA(inputs):\n",
         "    shape=K.int_shape(inputs)\n",
         "    x=MaxPooling2D(pool_size=(shape[1],shape[2])) (inputs)\n",
@@ -224,6 +227,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# compiling the model\n",
         "model=get_base_model()  \n",
         "model.compile(optimizer='adam',loss='categorical_crossentropy',metrics=\"acc\")\n",
         "model.summary()"
@@ -237,11 +241,12 @@
     {
       "cell_type": "code",
       "source": [
+        "#Training and testing the model\n",
         "reduce_lr=ReduceLROnPlateau(monitor='loss', factor=0.4,patience=5, min_lr=0.00001)\n",
         "filepath = \"CDAM_Net.hdf5\"\n",
         "checkpoint = ModelCheckpoint(filepath, monitor='acc', verbose=1, save_best_only=True, mode='max')\n",
         "callbacks_list = [reduce_lr, checkpoint]\n",
-        "history = model.fit(train_data,epochs=1,batch_size=16,callbacks=callbacks_list)\n",
+        "history = model.fit(train_data,epochs=50,batch_size=16,callbacks=callbacks_list)\n",
         "results = model.evaluate(test_data, batch_size=16)\n",
         "Y_pred = model.predict(test_data, 428 // 17)\n",
         "print(test_data.classes)  \n",
